	  Aurich)
	* On ICQ, advertise the ICQ 6 typing capability.  This should fix the
	  reports of typing notifications not working with third-party clients
	  (Jaromír Karmazín)
	* Many QQ fixes and improvements, including the ability to connect
	  using QQ2008 protocol and sending/receiving of long messages.
	* Fix a crash with DNS SRV lookups (Florian Quèze)

	Gadu-Gadu:
	* Fix some problems with Gadu-Gadu buddy icons (Adam Strzelecki)
	* Gadu-Gadu now checks that UID's are valid (Adam Strzelecki)
	* Gadu-Gadu now does proper charset translations where needed (Adam
	  Strzelecki)

	MSN:
	* Fix an error with offline messages by shipping the *new* "Microsoft
	  Secure Server Authority" and the "Microsoft Internet Authority"
	  certificates. These are now always installed even when using
	  --with-system-ssl-certs because most systems don't ship those
	  intermediate certificates.
	* The Games and Office media can now be set and displayed (in addition
	  to the previous Music media). The Media status text now shows the
	  album, if possible.
	* Messages sent from a mobile device while you were offline are now
	  correctly received.
	* Many other fixes and code cleanup.

	SIMPLE:
	* Fix a crash when a malformed message is received.
	* Don't allow connecting accounts if no server name has been specified
	  (Florian Quèze)

	XMPP:
	* Fix the namespace URL we look for in PEP reply stanzas to match the URL
	  used in the 'get' requests (Paul Aurich)
	* Resources can be set to the local machine's hostname by using
	  __HOSTNAME__ as the resource string (Jonathan Sailor)
	* Resources can now be left blank, causing the server to generate a
	  resource for us where supported (Jonathan Sailor)
	* Resources now default to no value
	* Quit trying to get user info for MUC's (Paul Aurich)
	* Send "client-accepts-full-bind-result" attribute during SASL login.
	  This will fix Google Talk login failures if the user configures the
	  wrong domain for his/her account.